Fix misaligned gutters when a row is nested inside a collapsed row, fixes #7659

--- a/scss/grid/_classes.scss
+++ b/scss/grid/_classes.scss
@@ -117,6 +117,11 @@
     // Responsive collapsing
     .#{$-zf-size}-#{$collapse} {
       > .#{$column} { @include grid-col-collapse; }
+
+      .#{$row} {
+        margin-left: 0;
+        margin-right: 0;
+      }
     }
 
     .#{$-zf-size}-#{$uncollapse} {
